# python-dynamic-version

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
